compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__pattern_matching_on_literal_record.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1220
expression: "\npub type Wibble { Wibble(Int) }\npub fn main() {\n  let n = 1\n  case Wibble(n) {\n    _ -> Nil\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble { Wibble(Int) }
pub fn main() {
  let n = 1
  case Wibble(n) {
    _ -> Nil
  }
}

----- WARNING
warning: Redundant record
  ┌─ /src/warning/wrn.gleam:5:8
  │
5 │   case Wibble(n) {
  │        ^^^^^^^^^ You can remove this record wrapper

Instead of building a record and matching on it, you can match on its
contents directly.
A case expression can take multiple subjects separated by commas like this:

    case one_subject, another_subject {
      _, _ -> todo
    }

See: https://tour.gleam.run/flow-control/multiple-subjects/
